--- a/UI.MasterChefe.Web/Views/Home/Index.cshtml
+++ b/UI.MasterChefe.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<div id="carouselImg" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselImg" class="carousel slide container-fluid" data-bs-ride="carousel">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselImg" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselImg" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -12,14 +12,15 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="~/Img/imagens-gratis.jpg" class="d-block w-100" alt="...">
+            <img src="~/Img/imagem3.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="~/Img/images (1).jpg" class="d-block w-100" alt="...">
+            <img src="~/Img/comida-no-egito-1500x500.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="~/Img/images (2).jpg" class="d-block w-100" alt="...">
+            <img src="~/Img/imagem4.jpg" class="d-block w-100" alt="...">
         </div>
+
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselImg" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -31,8 +32,8 @@
     </button>
 </div>
 
-    <div>
+<div>
 
-    <partial name="_PartialVitrine"  view-data="ViewData"></partial>
+    <partial name="_PartialVitrine" view-data="ViewData"></partial>
 
-    </div>
+</div>
