--- a/UI.MasterChefe.Web/Views/Home/_PartialVitrine.cshtml
+++ b/UI.MasterChefe.Web/Views/Home/_PartialVitrine.cshtml
@@ -9,7 +9,7 @@
             {
                 <div class="col">
                     <div class="card h-100">
-                        <img class="card-img-top" data-src="@Html.DisplayFor(modelItem => @item.imagem)" src="~/Img/imagens-gratis.jpg">
+                        <img class="card-img-top" data-src="@Html.DisplayFor(modelItem => @item.imagem)" src="~/Img/@item.imagem">
                         <div class="card-body">
                             <h5 class="card-title">@Html.DisplayFor(modelItem => @item.titulo)</h5>
                             <div class="d-flex justify-content-between align-items-center">
