--- a/UI.MasterChefe.Web/Views/Ingrediente/_ExcluirIngredientePartial.cshtml
+++ b/UI.MasterChefe.Web/Views/Ingrediente/_ExcluirIngredientePartial.cshtml
@@ -11,8 +11,8 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p id="idNome"></p>
-                    <input asp-for="@Model.id" type="hidden" id="hdIdExcluir" />
+                    <p id="idNomeIngrediente"></p>
+                    <input asp-for="@Model.id" type="hidden" id="hdIdExcluirIngrediente" />
 
                 </div>
                 <div class="modal-footer">
