--- a/UI.MasterChefe.Web/Views/Home/_DetalhePartial.cshtml
+++ b/UI.MasterChefe.Web/Views/Home/_DetalhePartial.cshtml
@@ -12,7 +12,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <img class="card h-50" src="~/Img/imagens-gratis.jpg" />
+                            <img class="card h-50" id="idimagem" />
                         </div>
 
                         <div class="col">
