--- a/UI.MasterChefe.Web/Views/Ingrediente/Cadastro.cshtml
+++ b/UI.MasterChefe.Web/Views/Ingrediente/Cadastro.cshtml
@@ -7,10 +7,11 @@
 
 <h5>Cadastro</h5>
 
-<input asp-for="@Model.id" type="hidden" id="hdReceitaId" value="@ViewBag.ReceitaId"/>
-<input asp-for="@Model.id" type="hidden" id="hdIngredienteId" />
-<form asp-controller="Ingrediente" asp-action="Cadastro" method="post" class="border" enctype="multipart/form-data">
 
+<form asp-controller="Ingrediente" asp-action="Cadastro" method="post" class="border" >
+
+    <input asp-for="@Model.receitaId" type="hidden" id="hdReceitaId" value="@ViewBag.ReceitaId" />
+    <input asp-for="@Model.id" type="hidden" id="hdIngredienteId" value="@ViewBag.id" />
 
     <div class="container">
         <div class="row g-2 align-items-center">
@@ -28,8 +29,8 @@
 
             <div class="col-4">
                 <label asp-for="@Model.quantidade" class="form-label">Quantidade</label>
-                <input type="number" asp-for="@Model.descricao" class="form-control" id="txtdescicao">
-                <span asp-validation-for="@Model.descricao" class="text-danger"></span>
+                <input type="number" asp-for="@Model.quantidade" class="form-control" id="txtdescicao">
+                <span asp-validation-for="@Model.quantidade" class="text-danger"></span>
             </div>
 
         </div>
