--- a/UI.MasterChefe.Web/Views/Receita/Cadastro.cshtml
+++ b/UI.MasterChefe.Web/Views/Receita/Cadastro.cshtml
@@ -7,10 +7,10 @@
 
 <h5>Cadastro</h5>
 
-<input asp-for="@Model.id" type="hidden" id="hdId" />
 <form asp-controller="Receita" asp-action="Cadastro" method="post" class="border" enctype="multipart/form-data">
 
 
+    <input asp-for="@Model.id" type="hidden" id="hdId" value="@ViewBag.id"/>
     <div class="container">
         <div class="row g-2 align-items-center">
             <div class="col-4">
